--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,7 +1,10 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-videojuegos:
+videogames:
   name: Videojuegos
 
-coches:
+cars:
   name: Coches
+
+real_state:
+  name: Casas
