--- a/test/fixtures/categories.yml
+++ b/test/fixtures/categories.yml
@@ -1,10 +1,29 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+real_state:
+  name: Casas
 
 videogames:
   name: Videojuegos
 
+computers:
+  name: Informática
+
+clothes:
+  name: Ropa
+
 cars:
   name: Coches
 
-real_state:
-  name: Casas
+music:
+  name: Música
+
+electronic:
+  name: Electrónica
+
+books:
+  name: Libros
+
+mobile:
+  name: Móviles
+
+sports:
+  name: Deportes
