--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,14 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+pepe:
+  email: pepito@vendelo.com
+  username: pepe09
+  password_digest: <%= BCrypt::Password.create('testme', cost: 5) %>
 
-one:
-  email: MyString
-  username: MyString
-  password_digest: MyString
+juanito:
+  email: juanito@vendelo.com
+  username: juanote86
+  password_digest: <%= BCrypt::Password.create('testme', cost: 5) %>
 
-two:
-  email: MyString
-  username: MyString
-  password_digest: MyString
+maria:  
+  email: maria@vendelo.com
+  username: misabel
+  password_digest: <%= BCrypt::Password.create('testme', cost: 5) %>
